NetBSD Problem Report #50948

From www@NetBSD.org  Fri Mar 11 17:15:51 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id CCE507A20E
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Mar 2016 17:15:51 +0000 (UTC)
Message-Id: <20160311171551.0E27D7ACBC@mollari.NetBSD.org>
Date: Fri, 11 Mar 2016 17:15:51 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/ic/malo.c:1626]: (style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50948
>Category:       kern
>Synopsis:       src/sys/dev/ic/malo.c:1626]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Mar 11 17:20:00 +0000 2016
>Closed-Date:    Sat Mar 12 01:40:17 +0000 2016
>Last-Modified:  Sat Mar 12 01:40:17 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160311
>Organization:
>Environment:
>Description:
src/sys/dev/ic/malo.c:1626]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.


Source code is

  if ((error = firmware_open("malo", name, &fw) != 0)) {



Maybe better code

  if ((error = firmware_open("malo", name, &fw)) != 0) {








>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50948 CVS commit: src/sys/dev/ic
Date: Fri, 11 Mar 2016 13:33:18 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Mar 11 18:33:18 UTC 2016

 Modified Files:
 	src/sys/dev/ic: malo.c

 Log Message:
 PR/50948: David Binderman: Fix misplaced parens


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/dev/ic/malo.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 12 Mar 2016 01:40:17 +0000
State-Changed-Why:
christos committed it


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.