PR/50948: David Binderman: Fix misplaced parens